# snek

./: CMakeLists.txt  README.md
incl/: snek.hpp
src/: app.cpp  food.cpp  io.cpp  main.cpp  snake.cpp
